Version 4.10717 (May 9th 2019)
- Fixed: dzVents, Allowing no error message for HTTP calls (#3191)
- Fixed: EcoCompteur now uses the port specified in the hardware setup (#3184)
- Fixed: Log for Weight sensor (#3192)
- Fixed: issue with Session ID/Login
- Fixed: issue with slightly  to large labels for the selector switch (#3187)
- Updated: dzVents (version 2.4.19, See dzVents/documentation/history.md)

Version 4.10658 (May 5th 2019)
- Implemented: [BleBox] Add support for airSensor and use the newest api for shutterBox
- Implemented: Alecto WS5500 implemented (pTypeWeather)
- Implemented: Anna Thermostat Added ability to select presets on the Anna via selector switch. Added ability to update the state of the proximity switch in the Anna thermostat.
- Implemented: Better graph display for thermostat devices
- Implemented: Blinds T14/R15/T16 to lights.html
- Implemented: CayenneLPP, added initial support for LPP_UNIXTIME
- Implemented: Cereal Proxy
- Implemented: Custom icons for: Contact Door Contact Push On Push Off Door Lock Door Lock Inverted
- Implemented: Devices Tab, Scene/Group log icon added
- Implemented: EnOcean3 implemented EPP D2-03-0A
- Implemented: EventSystem logging name when issuing thermostat SetPoint/Mode/Fan command
- Implemented: EvoHome radiator Valve Value to Pushers InfluxDB worker
- Implemented: Experimental support for WebSockets protocol
- Implemented: Hardware setup, support /dev/serial/by-id on Linux
- Implemented: InfluxDB Data push, support for Username/Password
- Implemented: InfluxDB: added option for remote proxy path
- Implemented: Logitech Media Server, added 'daphile' to the list of supported models
- Implemented: Make Telegram notification silent when priority is negative
- Implemented: Maverick 773 BBQ Temperature meter now using fixed ID as there is a new id generated between transmitter and controller every 15 minutes
- Implemented: New Aqara Wireless Mini Switch