@@ -1,3 +1,6 @@
+Version 4.xxxxx (xxx 2019)
+- Implemented: DarkSky CloudCover sensor
+
 Version 4.10717 (May 9th 2019)
 - Fixed: dzVents, Allowing no error message for HTTP calls (#3191)
 - Fixed: EcoCompteur now uses the port specified in the hardware setup (#3184)
